# ZeSS

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.yml  main.go
.githooks/: commit-msg  pre-commit  vinvoor_format_lint
.github/: pull_request_template.md
.github/workflows/: build.yml  commit_message_check.yml  vingo.yml  vingo_audit.yml  vinvoor.yml  vinvoor_format_lint.yml  zess_docker.yml
scanner/: sdkconfig.old
vingo/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  dev.env  go.mod  go.sum  main.go  template.env
vingo/database/: Cargo.toml  cards.go  days.go  db.go  models.go  scans.go  seasons.go  settings.go  users.go
vingo/database/migrations/: 1_init.down.sql  1_init.up.sql  2_cards_extra_column.up.sql
vingo/database/src/: error.rs  lib.rs
vingo/database/src/models/: card.rs  user.rs
vingo/database/src/repos/: card.rs  user.rs
vingo/handlers/: access.go  auth.go  card.go  cards.go  days.go  leaderboard.go  pages.go  public.go  scan.go  scans.go  seasons.go  settings.go  store.go  users.go
vingo/layouts/: cards.html  days.html  index.html  landing.html  leaderboard.html  main.html  scans.html  settings.html  stats.html
vingo/layouts/partials/: header.html  navbar.html
vingo/migration/: Cargo.toml
vingo/migration/src/: lib.rs  m20220101_000001_create_users.rs  m20240829_234032_create_card.rs  m20240903_194156_create_scan.rs  m20240909_195645_create_days.rs  m20240909_214352_create_seasons.rs
vingo/src/: main.rs  middleware.rs
vingo/src/entities/: card.rs  cards.rs  day.rs  mod.rs  prelude.rs  scan.rs  scans.rs  season.rs  seasons.rs  settings.rs  streak_days.rs  user.rs  users.rs
vingo/src/handlers/: version.rs
vingo/src/routes/: auth.rs  cards.rs  days.rs  info.rs  leaderboard.rs  mod.rs  scans.rs  seasons.rs  settings.rs
vingo/src/routes/util/: errors.rs  session.rs
vinscant/: .gitignore  Cargo.toml  README.md  boot.py  build.rs  cfg.toml  cfg.toml.example  key.txt  main.py  music.py  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  upload.sh  upload_file.sh
vinscant/.cargo/: config.toml
vinscant/.github/workflows/: rust_ci.yml
vinscant/3d/: case.scad
vinscant/mpfiles/: boot.py  main.py
vinscant/mpfiles/lib/: mfrc522.py  music.py  term_color.py
vinscant/src/: buzzer.rs  card_request.rs  lib.rs  main.cpp  main.rs  ping_pong.rs  status_notifier.rs  wifi.rs
vinvoor/: .dockerignore  .gitignore  .tool-versions  Dockerfile  Dockerfile.dev  README.md  dev.env  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  production.env  template.env  tsconfig.json  vite.config.ts
vinvoor/src/: App.tsx  Cards.tsx  Logout.tsx  NavBar.tsx  WelcomePage.tsx  main.tsx  theme.ts
vinvoor/src/auth/: Login.tsx  Logout.tsx
vinvoor/src/cards/: Card.tsx  CardAdd.tsx  CardDelete.tsx  CardTable.tsx  CardTableHead.tsx  CardTableToolBar.tsx  Cards.tsx  CardsAdd.tsx  CardsDelete.tsx  CardsEmpty.tsx  CardsTable.tsx  CardsTableBody.tsx  CardsTableHead.tsx  CardsTableToolBar.tsx  CardsTableToolbar.tsx  CircularTimeProgress.tsx
vinvoor/src/components/: BrowserView.tsx  ConfirmationModal.tsx  DarkModeToggle.tsx  LoadingSkeleton.tsx  ProtectedRoute.tsx  TypographyG.tsx  UnstyledLink.tsx
vinvoor/src/errors/: ErrorPage.tsx
vinvoor/src/footer/: Footer.tsx
vinvoor/src/hooks/: useCard.ts  useDays.ts  useFetch.ts  useLeaderboard.ts  useScan.ts  useSeasons.ts  useSettings.ts  useUser.ts  useVersion.ts
vinvoor/src/leaderboard/: Leaderboard.tsx  LeaderboardTableBody.tsx  LeaderboardTableHead.tsx  LeaderboardTableToolbar.tsx
vinvoor/src/navbar/: NavBar.tsx  NavBarLogo.tsx  NavBarPages.tsx  NavBarSandwich.tsx  NavBarSeasons.tsx  NavBarUserMenu.tsx
vinvoor/src/overview/: Overview.tsx
vinvoor/src/providers/: CustomSnackbarProvider.tsx  DataProvider.tsx  ThemeProvider.tsx  UserProvider.tsx
vinvoor/src/scans/: Scans.tsx  ScansBody.tsx  ScansTableBody.tsx  ScansTableHead.tsx
vinvoor/src/settings/: Settings.tsx  SettingsOverview.tsx
vinvoor/src/theme/: ThemeProvider.tsx  theme.ts
vinvoor/src/themes/: theme.ts  (+1 more)
web/: go.mod  main.go
(+47 files in other folders)
