[package]
name = "vingo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "migration" ]

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["tokio", "http1", "tracing", "query", "json" ] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.12.7", default-features = false, features = [ "json", "rustls-tls" ] }
sea-orm = { version = "1.0.1", default-features = false, features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
tokio = { version = "1.39.3", default-features = false, features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5.2", default-features = false, features = ["trace"] }
tower-sessions = { version = "0.12.3", default-features = false, features = ["memory-store", "axum-core"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
