[package]
name = "vinscant"
version = "0.1.0"
authors = ["axel"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "vinscant"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
toml-cfg = "0.2.0"
anyhow = "1.0.86"
embedded-svc = "0.28.0"
mfrc522 = "0.7.0"
hex = "0.4.3"
ws2812-esp32-rmt-driver = { version = "0.9.0", features = ["smart-leds-trait"] }
smart_led_effects = "0.1.7"
palette = "0.7.6"
rgb = "0.8.50"
rand = "0.8.5"

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2.0"
